--- a/view/src/main/resources/i18n/community.properties
+++ b/view/src/main/resources/i18n/community.properties
@@ -1,8 +1,8 @@
 community.page.help.title=Registration and Contacting Members
-community.page.help.text=Anyone in the world can become a member of the {0}\
-community by&#160;<a href="/register">registering</a>\
+community.page.help.text=Anyone in the world can become a member of the {0} \
+community by <a href="/register">registering</a> \
 on the site.
-community.page.help.text2=Send a message to a member by clicking on the member's\
+community.page.help.text2=Send a message to a member by clicking on the member's \
 name below to open their profile and then selecting "Send message."
 community.page.members.count=Members
 community.page.members.search.placeholder=Filter users
